# measure-exec-time

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
